# VaeaNTT

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  build.rs
.github/workflows/: ci.yml  docs.yml
benches/: README.md  butterfly_lab.rs  ntt32_bench.rs  ntt64_bench.rs  ntt_lab.rs  pq_bench.rs  vs_concrete_ntt.rs  vs_libcrux.rs  vs_pqclean.rs
bindings/: README.md
bindings/c/: VaeaNtt32.d.h  VaeaNtt32.h  VaeaNttError.d.h  VaeaNttError.h  VaeaPrimeList.d.h  VaeaPrimeList.h
bindings/cpp/: VaeaNtt32.d.hpp  VaeaNtt32.hpp  VaeaNttError.d.hpp  VaeaNttError.hpp  VaeaPrimeList.d.hpp  VaeaPrimeList.hpp
bindings/js/: VaeaNtt32.d.ts  VaeaNtt32.mjs  VaeaNttError.d.ts  VaeaNttError.mjs  VaeaPrimeList.d.ts  VaeaPrimeList.mjs  index.d.ts  index.mjs
examples/: README.md  bias_check.rs  dudect_ntt.rs  exhaustive_test.rs  mldsa_ntt.rs  security_exploits.rs  verify_no_false_positive.rs
scripts/: run_dudect.sh
src/: ffi.rs  lib.rs  poly.rs  pq.rs  rns.rs
src/ntt32/: arith.rs  context.rs  mod.rs  neon.rs  prime.rs  scalar.rs
src/ntt64/: arith.rs  context.rs  mod.rs  prime.rs
tests/: README.md  attack_vectors.rs  constant_time.rs  ntt32_integration.rs  ntt64_integration.rs
