[package]
name = "vaea-ntt"
version = "0.1.0"
edition = "2021"
rust-version = "1.73"
description = "High-performance NTT engine for post-quantum cryptography. ARM NEON native, 28-bit and 64-bit prime pipelines."
license = "AGPL-3.0-or-later"
repository = "https://github.com/veae/vaea-ntt"
keywords = ["ntt", "post-quantum", "cryptography", "neon", "arm"]
categories = ["cryptography", "algorithms", "no-std"]

[lib]
crate-type = ["lib", "cdylib"]

[features]
default = []
rand = ["dep:rand", "dep:rand_distr"]
ffi = ["dep:diplomat", "dep:diplomat-runtime"]

[dependencies]
rand = { version = "0.8", optional = true }
rand_distr = { version = "0.4", optional = true }
diplomat = { version = "0.15", optional = true }
diplomat-runtime = { version = "0.15", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
clap = "2"
concrete-ntt = "0.2"
rand = "0.8"
rand_chacha = "0.3"
rand_core = "0.5"
rand_distr = "0.4"
dudect-bencher = "0.4"
vaea-ntt = { path = ".", features = ["rand"] }

[[bench]]
name = "ntt32_bench"
harness = false

[[bench]]
name = "ntt64_bench"
harness = false

[[bench]]
name = "vs_concrete_ntt"
harness = false

[[bench]]
name = "pq_bench"
harness = false
