[package]
name = "vaea-ntt"
version = "0.1.0"
edition = "2021"
rust-version = "1.87"
description = "High-performance Number Theoretic Transform (NTT) for post-quantum cryptography. ARM NEON SIMD native, constant-time, no_std. ML-DSA, Falcon, FHE. Dual-licensed AGPL-3.0 + commercial."
license = "AGPL-3.0-or-later"
repository = "https://github.com/Vaeatech/VaeaNTT"
homepage = "https://vaea.tech"
documentation = "https://docs.rs/vaea-ntt"
readme = "README.md"
keywords = ["ntt", "post-quantum", "cryptography", "lattice", "fhe"]
categories = ["cryptography", "algorithms", "no-std"]
exclude = ["mlkem_ntt/", "pqclean_ntt/", "benches/butterfly_lab.rs", "benches/ntt_lab.rs"]


[features]
default = ["std"]
std = []
rand = ["dep:rand", "dep:rand_distr"]
ffi = ["dep:diplomat", "dep:diplomat-runtime"]

[dependencies]
rand = { version = "0.8", optional = true }
rand_distr = { version = "0.4", optional = true }
diplomat = { version = "0.15", optional = true }
diplomat-runtime = { version = "0.15", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
clap = "2"
concrete-ntt = "0.2"
rand = "0.8"
rand_chacha = "0.3"
rand_core = "0.5"
rand_distr = "0.4"
dudect-bencher = "0.4"
libcrux-ml-kem = "0.0.9"
vaea-ntt = { path = ".", features = ["rand"] }

[build-dependencies]
cc = "1"

[[bench]]
name = "ntt32_bench"
harness = false

[[bench]]
name = "ntt64_bench"
harness = false

[[bench]]
name = "vs_concrete_ntt"
harness = false

[[bench]]
name = "pq_bench"
harness = false

[[bench]]
name = "vs_libcrux"
harness = false

[[bench]]
name = "butterfly_lab"
harness = false

[[bench]]
name = "ntt_lab"
harness = false

[[bench]]
name = "vs_pqclean"
harness = false
